--- a/index.html
+++ b/index.html
@@ -6,20 +6,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="../../Программы/OSPanel/domains/windeco/js/script.js"></script>
 </head>
 <body>
-<head>
+<header>
+    <div class="container">
+        <nav class="">
+            <a href="#">Главная</a>
+            <a href="#">Галерея</a>
+            <a href="#">О нас</a>
+            <a href="#">Контакты</a>
+        </nav>
+    </div>
+
+</header>
+<main>
+    <div class="first_slider">
+        <div class="slide" style="background-image: url(img/slide.png);">
+            <div>
+                <h2><b>пошив национальной одежды</b> на заказ</h2>
+                <a href="#" class="btn">Заказать</a>
+            </div>
+        </div>
+        <div class="slide" style="background-image: url(img/slide.png);">
+            <div>
+                <h2><b>пошив национальной одежды</b> на заказ</h2>
+                <a href="#" class="btn">Заказать</a>
+            </div>
+        </div>
+        <div class="slide" style="background-image: url(img/slide.png);">
+            <div>
+                <h2><b>пошив национальной одежды</b> на заказ</h2>
+                <a href="#" class="btn">Заказать</a>
+            </div>
+        </div>
+    </div>
+    <div class="galery">
+        <h2 class="title">Галерея</h2>
+        <div class="galery_list">
+            <div class="galery_list_item">
+                <img src="" alt="">
+                <h3>рубахи</h3>
+                <p>Название коллекции</p>
+            </div>
+            <div class="galery_list_item">
+                <img src="" alt="">
+                <h3>платья</h3>
+                <p>Название коллекции</p>
+            </div>
+            <div class="galery_list_item">
+                <img src="" alt="">
+                <h3>жилетки</h3>
+                <p>Название коллекции</p>
+            </div>
+            <div class="galery_list_item">
+                <img src="" alt="">
+                <h3>пояса</h3>
+                <p>Название коллекции</p>
+            </div>
+        </div>
+    </div>
+    <div class="about_us">
+        <div class="about_us_text">
+            <h2 class="title">о нас</h2>
+            <p>Древняя одежда славян значительно отличалась от одежды соседних народов. По письменным свидетельствам, а также археологическим материалам
+                мало что известно про женскую одежду. По поздним данным можно судить, что в основном это были длинные рубахи (примерно до колена), иногда украшенные вышивкой
+                и узорами из ткани. Рубахи были повседневные и праздничные, похоронные и свадебные, вороженные и покосные.
+            </p>
+            <p>
+                По письменным свидетельствам, а также археологическим  материалам мало что известно про женскую одежду.По поздним данным можно судить, что в основном это были
+                длинные рубахи (примерно до колена).
+            </p>
+        </div>
+        <div class="about_us_images">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="contacts">
+        <h2 class="title">контакты</h2>
+        <div class="contacts_box">
+            <div>
+                <p>Адрес: <br> г. Минск, ул. М. Богдановича 83 </br><a href="tel:+375 25 123 45 65">+375 25 123 45 65</a><a href="tel:+375 33 456 55 89">+375 33 456 55 89</a></p>
+                <br><b>Как добраться: </b></br>ревняя одежда славян значительно
+                отличалась от одежды соседних народов. По письменным
+                свидетельствам, а также археологическим материалам
+                мало что известно про женскую одежду. </p>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
     <nav>
-        <a href="#">Главная</a>
-        <a href="#">Галерея</a>
-        <a href="#">О нас</a>
-        <a href="#">Контакты</a>
+        <a href="#">главная</a>
+        <a href="#">галерея</a>
+        <a href="#">о нас</a>
+        <a href="#">контакты</a>
     </nav>
-</head>
-
-
+</footer>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
 <script src="js/script.js"></script>
