--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <a href="#">Контакты</a>
         </nav>
     </div>
-
 </header>
 <main>
     <div class="first_slider">
@@ -42,67 +41,78 @@
             </div>
         </div>
     </div>
-    <div class="galery">
+    <div class="galery ">
+        <div class="right-line"></div>
         <h2 class="title">Галерея</h2>
-        <div class="galery_list">
-            <div class="galery_list_item">
-                <img src="" alt="">
-                <h3>рубахи</h3>
-                <p>Название коллекции</p>
-            </div>
-            <div class="galery_list_item">
-                <img src="" alt="">
-                <h3>платья</h3>
-                <p>Название коллекции</p>
-            </div>
-            <div class="galery_list_item">
-                <img src="" alt="">
-                <h3>жилетки</h3>
-                <p>Название коллекции</p>
-            </div>
-            <div class="galery_list_item">
-                <img src="" alt="">
-                <h3>пояса</h3>
-                <p>Название коллекции</p>
+        <div class="container">
+            <div class="galery_list">
+                <div class="galery_list_item">
+                    <img src="img/gal1.png" alt="">
+                    <h3>рубахи</h3>
+                    <p>Название коллекции</p>
+                </div>
+                <div class="galery_list_item">
+                    <img src="img/gal2.png" alt="">
+                    <h3>платья</h3>
+                    <p>Название коллекции</p>
+                </div>
+                <div class="galery_list_item">
+                    <img src="img/gal3.png" alt="">
+                    <h3>жилетки</h3>
+                    <p>Название коллекции</p>
+                </div>
+                <div class="galery_list_item">
+                    <img src="img/gal4.png" alt="">
+                    <h3>пояса</h3>
+                    <p>Название коллекции</p>
+                </div>
             </div>
         </div>
+
     </div>
     <div class="about_us">
-        <div class="about_us_text">
-            <h2 class="title">о нас</h2>
-            <p>Древняя одежда славян значительно отличалась от одежды соседних народов. По письменным свидетельствам, а также археологическим материалам
-                мало что известно про женскую одежду. По поздним данным можно судить, что в основном это были длинные рубахи (примерно до колена), иногда украшенные вышивкой
-                и узорами из ткани. Рубахи были повседневные и праздничные, похоронные и свадебные, вороженные и покосные.
-            </p>
-            <p>
-                По письменным свидетельствам, а также археологическим  материалам мало что известно про женскую одежду.По поздним данным можно судить, что в основном это были
-                длинные рубахи (примерно до колена).
-            </p>
-        </div>
-        <div class="about_us_images">
-            <div>
-                <img src="" alt="">
+        <div class="left-line"></div>
+        <div class="container">
+            <div class="about_us_text">
+                <h2 class="title">о нас</h2>
+                <p>Древняя одежда славян значительно отличалась от одежды соседних народов. По письменным свидетельствам, а также археологическим материалам
+                    мало что известно про женскую одежду. По поздним данным можно судить, что в основном это были длинные рубахи (примерно до колена), иногда украшенные вышивкой
+                    и узорами из ткани. Рубахи были повседневные и праздничные, похоронные и свадебные, вороженные и покосные.
+                </p>
+                <p>
+                    По письменным свидетельствам, а также археологическим  материалам мало что известно про женскую одежду.По поздним данным можно судить, что в основном это были
+                    длинные рубахи (примерно до колена).
+                </p>
             </div>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
+            <div class="about_us_images">
+                <div class="big_img">
+                    <img src="img/about1.png" alt="">
+                </div>
+                <div>
+                    <img src="img/about2.png" alt="" style="margin-bottom: 10px"><img src="img/about3.png" alt="">
+                </div>
             </div>
         </div>
+
     </div>
     <div class="contacts">
-        <h2 class="title">контакты</h2>
-        <div class="contacts_box">
-            <div>
-                <p>Адрес: <br> г. Минск, ул. М. Богдановича 83 </br><a href="tel:+375 25 123 45 65">+375 25 123 45 65</a><a href="tel:+375 33 456 55 89">+375 33 456 55 89</a></p>
-                <br><b>Как добраться: </b></br>ревняя одежда славян значительно
-                отличалась от одежды соседних народов. По письменным
-                свидетельствам, а также археологическим материалам
-                мало что известно про женскую одежду. </p>
-            </div>
-            <div>
-                <img src="" alt="">
+        <div class="right-line"></div>
+        <div class="container">
+            <h2 class="title">контакты</h2>
+            <div class="contacts_box">
+                <div class="contacts_box_text">
+                    <p>Адрес: <br> г. Минск, ул. М. Богдановича 89 </br><a href="tel:+375 25 123 45 65">+375 25 123 45 65</a></br><a href="tel:+375 33 456 55 89">+375 33 456 55 89</a></p>
+                    <p><br><b>Как добраться: </b></br>древняя одежда славян значительно
+                    отличалась от одежды соседних народов. По письменным
+                    свидетельствам, а также археологическим материалам
+                    мало что известно про женскую одежду. </p>
+                </div>
+                <div class="contacts_box_map">
+                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A2b9ed67e8f76e6f888cd9e3dc8493769ceaccb448169753c0ca39bd945c9a36b&amp;source=constructor" width="100%" height="280" frameborder="0"></iframe>
+                </div>
             </div>
         </div>
+
     </div>
 </main>
 <footer>
