--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <header>
     <div class="container">
         <nav class="">
-            <a href="#">Главная</a>
-            <a href="#">Галерея</a>
-            <a href="#">О нас</a>
-            <a href="#">Контакты</a>
+            <a href="#main">Главная</a>
+            <a href="#galery">Галерея</a>
+            <a href="#about_us">О нас</a>
+            <a href="#contact">Контакты</a>
         </nav>
     </div>
 </header>
 <main>
-    <div class="first_slider">
+    <div class="first_slider" id="main">
         <div class="slide" style="background-image: url(img/slide.png);">
             <div>
                 <h2><b>пошив национальной одежды</b> на заказ</h2>
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="galery ">
+    <div class="galery " id="galery">
         <div class="right-line"></div>
         <h2 class="title">Галерея</h2>
         <div class="container">
@@ -81,7 +81,7 @@
         </div>
 
     </div>
-    <div class="about_us">
+    <div class="about_us" id="about_us">
         <div class="left-line"></div>
         <div class="container">
             <div class="about_us_text">
@@ -106,7 +106,7 @@
         </div>
 
     </div>
-    <div class="contacts">
+    <div class="contacts" id="contact">
         <div class="right-line"></div>
         <div class="container">
             <h2 class="title">контакты</h2>
@@ -128,10 +128,10 @@
 </main>
 <footer>
     <nav>
-        <a href="#">главная</a>
-        <a href="#">галерея</a>
-        <a href="#">о нас</a>
-        <a href="#">контакты</a>
+        <a href="#main">главная</a>
+        <a href="#galery">галерея</a>
+        <a href="#about_us">о нас</a>
+        <a href="#contact">контакты</a>
     </nav>
 </footer>
 <script src="js/jquery-3.3.1.min.js"></script>
